--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+numpy==1.18.2
 plotly==4.6.0
 retrying==1.3.3
+scipy==1.4.1
 six==1.14.0
 Werkzeug==1.0.1
